--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "jsx": "preserve",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -17,7 +16,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "sourceMap": true,
+    "baseUrl": "./",
+    "paths": {
+        "@components/*": ["components/*"],
+    }
   },
   "include": [
     "next-env.d.ts",
