--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -18,6 +19,12 @@
   "devDependencies": {
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.8.1",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-simple-import-sort": "^5.0.2",
     "typescript": "^4.0.2"
   }
 }
