Basic css to jss works

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "clsx": "^1.1.1",
+    "jss-cli": "^6.0.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
