--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jss-cli": "^6.0.1",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
     "@types/node": "^14.10.1",
