--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:sitemap": "node generate-sitemap.js",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js"
   },
@@ -24,7 +25,9 @@
     "prettier": "^2.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-gtm-module": "^2.0.11"
+    "react-gtm-module": "^2.0.11",
+    "sass": "^1.26.10",
+    "xml-formatter": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.10.1",
@@ -35,6 +38,7 @@
     "eslint": "7.8.1",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-simple-import-sort": "^5.0.2",
+    "nextjs-sitemap-generator": "^1.1.1",
     "typescript": "^4.0.2"
   }
 }
