--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-gtm-module": "^2.0.11",
     "sass": "^1.26.10",
+    "sql-formatter-plus": "^1.3.6",
     "xml-formatter": "^2.1.3"
   },
   "devDependencies": {
