--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "build:development": "WEBPACK_ENV=production APP_ENV=development webpack",
+    "build:production": "WEBPACK_ENV=production APP_ENV=production webpack",
+    "dev": "WEBPACK_ENV=development APP_ENV=development webpack-dev-server",
     "build:sitemap": "node generate-sitemap.js",
-    "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
@@ -14,33 +14,50 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@sentry/browser": "^5.23.0",
-    "@sentry/node": "^5.23.0",
-    "@sentry/tracing": "^5.23.0",
+    "@sentry/browser": "^5.24.2",
+    "@sentry/tracing": "^5.24.2",
     "clsx": "^1.1.1",
+    "history": "^5.0.0",
     "jss-cli": "^6.0.1",
     "markdown-to-react-loader": "^1.2.0",
     "marked": "^1.1.1",
-    "next": "9.5.3",
-    "next-seo": "^4.7.3",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
+    "query-string": "^6.13.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-gtm-module": "^2.0.11",
-    "sass": "^1.26.10",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.26.11",
     "sql-formatter-plus": "^1.3.6",
     "xml-formatter": "^2.1.3"
   },
   "devDependencies": {
-    "@types/node": "^14.10.1",
+    "@fortawesome/fontawesome-pro": "^5.14.0",
+    "@sentry/webpack-plugin": "^1.12.1",
+    "@svgr/webpack": "^5.4.0",
+    "@types/marked": "^1.1.0",
     "@types/react": "^16.9.49",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "babel-eslint": "10.1.0",
-    "eslint": "7.8.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "eslint": "7.9.0",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-simple-import-sort": "^5.0.2",
-    "nextjs-sitemap-generator": "^1.1.1",
-    "typescript": "^4.0.2"
+    "favicons-webpack-plugin": "^4.2.0",
+    "file-loader": "^6.1.0",
+    "html-webpack-harddisk-plugin": "^1.0.2",
+    "html-webpack-plugin": "^4.4.1",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.4",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
