Work on meta data

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-gtm-module": "^2.0.11",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.11",
@@ -38,6 +39,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/marked": "^1.1.0",
     "@types/react": "^16.9.49",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
