--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "xml-js": "^1.6.11"
   }
 }
