--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "16.13.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
+    "react-monaco-editor": "^0.40.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.11",
@@ -56,6 +57,7 @@
     "file-loader": "^6.1.0",
     "html-webpack-harddisk-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
+    "monaco-editor-webpack-plugin": "^1.9.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.4",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
