--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.11",
+    "sass.js": "^0.11.1",
     "sql-formatter-plus": "^1.3.6",
     "xml-formatter": "^2.1.3"
   },
