Create css formatter tool

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@sentry/browser": "^5.24.2",
     "@sentry/tracing": "^5.24.2",
     "clsx": "^1.1.1",
+    "cssfmt": "^2.1.5",
     "history": "^5.0.0",
     "jss-cli": "^6.0.1",
     "markdown-to-react-loader": "^1.2.0",
     "marked": "^1.1.1",
+    "postcss": "^8.0.5",
     "prettier": "^2.1.2",
     "query-string": "^6.13.2",
     "react": "16.13.1",
