Create html formatter

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.1.1",
     "cssfmt": "^2.1.5",
     "history": "^5.0.0",
+    "js-beautify": "^1.13.0",
     "jss-cli": "^6.0.1",
     "markdown-to-react-loader": "^1.2.0",
     "marked": "^1.1.1",
@@ -43,6 +44,7 @@
     "@fortawesome/fontawesome-pro": "^5.14.0",
     "@sentry/webpack-plugin": "^1.12.1",
     "@svgr/webpack": "^5.4.0",
+    "@types/js-beautify": "^1.11.0",
     "@types/marked": "^1.1.0",
     "@types/react": "^16.9.49",
     "@types/react-helmet": "^6.1.0",
