Refactor repeated code into RenderTool component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@musement/iso-duration": "^1.0.0",
     "@sentry/browser": "^5.24.2",
     "@sentry/tracing": "^5.24.2",
     "clsx": "^1.1.1",
@@ -28,7 +29,7 @@
     "markdown-to-react-loader": "^1.2.0",
     "marked": "^1.1.1",
     "postcss": "^8.0.5",
-    "prettier": "^2.1.2",
+    "prettier": "^2.6.2",
     "query-string": "^6.13.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -47,6 +48,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/js-beautify": "^1.11.0",
     "@types/marked": "^1.1.0",
+    "@types/prettier": "^2.7.0",
     "@types/react": "^16.9.49",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router": "^5.1.8",
