--- a/package.json
+++ b/package.json
@@ -5,75 +5,79 @@
   "scripts": {
     "build:development": "WEBPACK_ENV=production APP_ENV=development webpack",
     "build:production": "WEBPACK_ENV=production APP_ENV=production webpack",
-    "dev": "WEBPACK_ENV=development APP_ENV=development webpack-dev-server",
+    "dev": "WEBPACK_ENV=development APP_ENV=development webpack serve",
     "build:sitemap": "ts-node generate-sitemap.ts",
     "build:public": "cp -r public/* build",
     "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
     "@babel/parser": "^7.11.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@loadable/component": "^5.13.2",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@musement/iso-duration": "^1.0.0",
-    "@sentry/browser": "^5.24.2",
-    "@sentry/tracing": "^5.24.2",
+    "@sentry/browser": "^7.49.0",
+    "@sentry/tracing": "^7.49.0",
     "clsx": "^1.1.1",
     "cssfmt": "^2.1.5",
+    "favicons": "^7.1.2",
     "history": "^5.0.0",
     "html-to-react": "^1.4.3",
     "htmltojsx": "^0.3.0",
+    "iso8601-duration": "^2.1.1",
     "js-beautify": "^1.13.0",
     "jss-cli": "^6.0.1",
     "markdown-to-react-loader": "^1.2.0",
-    "marked": "^1.1.1",
+    "marked": "^4.3.0",
+    "monaco-editor": "^0.37.1",
     "postcss": "^8.0.5",
     "prettier": "^2.6.2",
-    "query-string": "^6.13.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "query-string": "^8.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
-    "react-monaco-editor": "^0.40.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-monaco-editor": "^0.52.0",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "sass": "^1.26.11",
     "sass.js": "^0.11.1",
     "sql-formatter-plus": "^1.3.6",
-    "xml-formatter": "^2.1.3"
+    "xml-formatter": "^3.3.2"
   },
   "devDependencies": {
     "@sentry/webpack-plugin": "^1.12.1",
-    "@svgr/webpack": "^5.4.0",
+    "@svgr/webpack": "^7.0.0",
     "@types/js-beautify": "^1.11.0",
-    "@types/marked": "^1.1.0",
+    "@types/marked": "^4.0.8",
     "@types/prettier": "^2.7.0",
-    "@types/react": "^16.9.49",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@types/react-router": "^5.0.0",
+    "@types/react-router-dom": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
-    "eslint": "7.9.0",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-simple-import-sort": "^5.0.2",
-    "favicons-webpack-plugin": "^4.2.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "eslint": "8.39.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "favicons-webpack-plugin": "^6.0.0",
     "file-loader": "^6.1.0",
-    "html-webpack-harddisk-plugin": "^1.0.2",
-    "html-webpack-plugin": "^4.4.1",
-    "monaco-editor-webpack-plugin": "^1.9.1",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.4",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "servor": "^4.0.2",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.0.4",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3",
     "xml-js": "^1.6.11"
   },
   "engines": {
